--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
   </head>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
     <script  src="js/index.js"></script>
+
+    <header id="logos">
+
+    </header>
+
+    <div id="main-doc1">
+
+    </div>
+
+    <div id="main-doc2">
+
+    </div>
+
+    <footer>
+
+    </footer>
   </body>
 </html>
