--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <h3>Strategic Management Online Crashcourse</h3>
         <p>In this crash course you will learn central concepts of 
           Innovation Management, explained in the book “Innovator’s 
-          Dilemma”, by Prof. Clayton Christensen. To better understand 
-          this theory, we will present a study case on Embraer, a Latin 
+          Dilemma”, by Prof. PPPPPPPP HHHHHHH. To better understand 
+          this theory, we will present a study case on JJJJJJJ, a Latin 
           American company, leader in the regional aviation sector, and 
           demonstrate how a company can be greatly innovative in highly 
           competitive segments of the market, while not losing focus on 
           its main products.
         </p>
-        <p>With the support of the State University of New York, IBS 
-            Americas offers crash courses, conferences, and other online 
+        <p>With the support of the State University of XXXXXX, TTTTTTT
+           offers crash courses, conferences, and other online 
             events so that you can acquire relevant knowledge in Business 
             Administration, preparing you to develop an international 
             career.
@@ -46,7 +46,7 @@
         <p>
           Besides receiving an International Certificate equivalent to a 
           3-hour class, students who demonstrate academic excellence in 
-          this crash course, run for scholarships for SUNY’s short-term 
+          this crash course, run for scholarships for DDDDDDDD’s short-term 
           programs.
         </p> 
         <p>
@@ -319,8 +319,8 @@
           <figcaption>Software Developer</figcaption>
           <img id="developer" src="images/developer.jpg" alt="my picture">
         </figure>
-        <p>Prof. Ricardo Britto is a Doctor in Business Administration, and Dean of IBS Americas. 
-          Coordinator of programs in the State University of New York, he is also a specialized 
+        <p>Prof.GGGGG FFFFFFF is a Doctor in Business Administration, and Dean of XXXXXXXXXX. 
+          Coordinator of programs in the ZZZZZZZZ of KKKKKKKKKKK, he is also a specialized 
           researcher in the areas of Strategy and International Marketing.
         </p>
     </div>
@@ -350,7 +350,7 @@
       <section>
         <header style="font-weight: bold;">Collaborate, share</header>
         <p>
-          This crash course is an IBS Americas initiative, supported by the State University of New York, 
+          This crash course is an YYYYYYYY's initiative, supported by the State University of XXXXXXXXX, 
           and has the objective of spreading knowledge in Business Administration from an 
           international perspective. Send the link to this page to your friends and share it on your 
           social media pages. We hope to form a generation of new leaders, with a solid conceptual 
